slider mobile style

--- a/index.html
+++ b/index.html
@@ -269,14 +269,16 @@
 		    </div>
 		</div>
 		<div class="musk"></div>
-		<div class="mobile-slider">
-			<div class="mobile-slider__images">
-				<img class="mobile-slider__image" src="img/mobile-slider__img.png">
-			</div>
-			<div class="mobile-slider__buttons">
-				<a class="mobile-slider__button left" href="#"></a>
-				<a class="mobile-slider__button rigth" href="#"></a>
-			</div>
+		<div class="container">
+			<div class="mobile-slider">
+			    <div class="mobile-slider__images">
+				    <img class="mobile-slider__image" src="img/mobile-slider__img.png">
+			    </div>
+			    <div class="mobile-slider__buttons">
+				    <a class="mobile-slider__button left" href="#"></a>
+				    <a class="mobile-slider__button rigth" href="#"></a>
+			    </div>
+		</div>
 		</div>
 	</section>
 	<section class="clients">
