Интеграция слайдера, поправка некоторых стилей, добаление файла скрипта

--- a/index.html
+++ b/index.html
@@ -60,44 +60,34 @@
                     <div class="options">
                         <div class="options__item">
                             <h3 class="subtitle options__title">City:</h3>
-                            <p class="options__text">Rostov-on-Don<br> LCD admiral</p>
+                            <p class="options__text"></p>
                         </div>
                         <div class="options__item">
                             <h3 class="subtitle options__title">Apartment area:</h3>
-                            <p class="options__text">81 m2</p>
+                            <p class="options__text"></p>
                         </div>
                         <div class="options__item">
                             <h3 class="subtitle options__title">Repair time:</h3>
-                            <p class="options__text">3.5 months</p>
+                            <p class="options__text"></p>
                         </div>
                         <div class="options__item">
                             <h3 class="subtitle options__title">Repair Cost:</h3>
-                            <p class="options__text">Upon request</p>
+                            <p class="options__text"></p>
                         </div>
                     </div>
                     <div class="arrows">
                         <a href="#" class="arrow arrow-left">
                             <span></span>
                         </a>
-                        <div class="arrows-items">
-                            <a class="arrows-items_link" href="#"><span></span></a>
-                            <a class="arrows-items_link" href="#"><span></span></a>
-                            <a class="arrows-items_link" href="#"><span></span></a>
-                        </div>
+                        <div class="slider__dots"></div>
                         <a href="#" class="arrow arrow-rigth">
                             <span></span>
                         </a>
                     </div>
                 </div>
                 <div class="slider-img">
-                    <ul class="slider-nav">
-                        <li class="slider-nav_li"><a href="#" class="slider-nav_link">Rostov-on-Don, Admiral</a></li>
-                        <li class="slider-nav_li"><a href="#" class="slider-nav_link">Sochi Thieves</a></li>
-                        <li class="slider-nav_li"><a href="#" class="slider-nav_link">Rostov-on-Don Patriotic</a></li>
-                    </ul>
-                    <div class="slider-images">
-                        <img class="slider_img" src="img/interior.png">
-                    </div>
+                    <ul class="slider-nav"></ul>
+                    <div class="slider-images"></div>
                 </div>
             </div>
         </div>
@@ -409,6 +399,7 @@
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="scripts/app.js"></script>
 </body>
 
 </html>
